refactors and UI changes

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-EXPO_PUBLIC_CLIENT_API_KEY="YOUR_CLIENT_API_KEY"
-EXPO_PUBLIC_COLLECTION_ID="YOUR_COLLECTION_ID"
+# payments
+EXPO_PUBLIC_CLIENT_COLLECTION_API_KEY="PAYMENT_CLIENT_API_KEY"
+EXPO_PUBLIC_COLLECTION_ID="COLLECTION_ID"
+
+# wallets
+EXPO_PUBLIC_CLIENT_WALLET_API_KEY="WALLET_CLIENT_API_KEY"
