--- a/app.json
+++ b/app.json
@@ -36,6 +36,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "6e5f5e4e-dbdf-41f7-931e-beae6931593f"
+      }
+    },
+    "owner": "crossmint"
   }
 }
