ported project into monorepo

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,78 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
 # dependencies
-node_modules/
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+/dist
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+.env
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
 # Expo
 .expo/
 dist/
 web-build/
-expo-env.d.ts
-
-# Native
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
 *.orig.*
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
+*.orig.*
+web-build/
 
 # macOS
 .DS_Store
-*.pem
+.AppleDouble
+.LSOverride
 
-# local env files
-.env*.local
-.env
+# Temporary files
+*.swp
+*.swo
+*~
 
-# typescript
-*.tsbuildinfo
+# IDE
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
 
-app-example
+# Logs
+logs
+*.log
+
+# Cache
+.cache/
+.npm/
+.eslintcache
