--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "mobile:ios": "pnpm --filter mobile ios",
     "mobile:android": "pnpm --filter mobile android",
-    "mobile:start": "pnpm --filter mobile start"
+    "mobile:start": "pnpm --filter mobile start",
+    "web:dev": "pnpm --filter web dev",
+    "web:build": "pnpm --filter web build",
+    "web:start": "pnpm --filter web start"
   },
   "devDependencies": {
     "typescript": "^5.8.2"
