--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@crossmint/client-sdk-react-ui": "catalog:",
+    "@crossmint/wallets-sdk": "^0.4.2",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
+    "@tanstack/react-query": "^5.71.0",
     "expo": "~52.0.41",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
+    "@tanstack/eslint-plugin-query": "^5.68.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.20",
     "@types/react-test-renderer": "^18.3.1",
