--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,6 @@
 packages:
   - "apps/*"
 catalog:
-  "@crossmint/client-sdk-react-ui": ^1.16.8
+  "@crossmint/client-sdk-react-ui": 1.16.5
   "react": 18.3.1
   "react-dom": 18.3.1
