--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -20,6 +20,8 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
+    "@solana/spl-token": "^0.4.13",
+    "@solana/web3.js": "^1.98.0",
     "@tanstack/react-query": "^5.71.0",
     "expo": "~52.0.41",
     "expo-blur": "~14.0.3",
